rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filters_segments__multiple_segments_combined.snap
---
source: cubesqlplanner/src/tests/integration/filters_segments.rs
expression: result
---
orders__count | orders__total_amount
--------------+---------------------
1             | 300.00
