rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filters_segments__segment_from_joined_cube.snap
---
source: cubesqlplanner/src/tests/integration/filters_segments.rs
expression: result
---
orders__count | orders__total_amount
--------------+---------------------
2             | 350.00
