rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filters_segments__segment_plus_filter.snap
---
source: cubesqlplanner/src/tests/integration/filters_segments.rs
expression: result
---
orders__count | orders__total_amount
--------------+---------------------
3             | 450.00
