rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filters_segments__segment_with_dimension_grouping.snap
---
source: cubesqlplanner/src/tests/integration/filters_segments.rs
expression: result
---
customers__city | orders__count
----------------+--------------
Boston          | 1            
New York        | 3            
San Francisco   | 1
