rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__filters_segments__segment_with_time_dimension.snap
---
source: cubesqlplanner/src/tests/integration/filters_segments.rs
expression: result
---
orders__created_at_month | orders__count | orders__total_amount
-------------------------+---------------+---------------------
2024-01-01 00:00:00      | 2             | 300.00              
2024-02-01 00:00:00      | 1             | 300.00              
2024-03-01 00:00:00      | 1             | 150.00
